--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Your Congressman</title>
+    <title>Protest Letter against Interference by 62 US Congressmen in Internal Matters of Pakistan</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Email Your Congressman</h1>
+        <h1>Protest Letter against Interference by 62 US Congressmen in Internal Matters of Pakistan</h1>
         <p>Select a congressman or their constituency, and click the button to send an email.</p>
 
         <!-- Text Area for Email -->
