--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Protest Letter against Interference by 62 US Congressmen in Internal Matters of Pakistan</h1>
-        <p>Select a congressman or their constituency, and click the button to send an email.</p>
+        <p>Click the button to send an email.</p>
 
         <!-- Text Area for Email -->
         <div class="textarea-container">
@@ -18,7 +18,12 @@
 
         <!-- Button to Send Email -->
         <div class="button-container">
-            <a id="sendEmailLink" class="send-button" href="#" >Send Email</a>
+            <a id="sendEmailButton1" class="send-button" href="#">Send Email to Group 1</a>
+            <a id="sendEmailButton2" class="send-button" href="#">Send Email to Group 2</a>
+            <a id="sendEmailButton3" class="send-button" href="#">Send Email to Group 3</a>
+            <a id="sendEmailButton4" class="send-button" href="#">Send Email to Group 4</a>
+            <a id="sendEmailButton5" class="send-button" href="#">Send Email to Group 5</a>
+            <a id="sendEmailButton6" class="send-button" href="#">Send Email to Group 6</a>
         </div>
     </div>
 
