--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <p>Click the button to send an email.</p>
         <!-- Button to Send Email -->
         <div class="button-container">
-            <a id="sendEmailButton1" class="send-button" href="#">Send Email to Group 1</a>
-            <a id="sendEmailButton2" class="send-button" href="#">Send Email to Group 2</a>
-            <a id="sendEmailButton3" class="send-button" href="#">Send Email to Group 3</a>
-            <a id="sendEmailButton4" class="send-button" href="#">Send Email to Group 4</a>
-            <a id="sendEmailButton5" class="send-button" href="#">Send Email to Group 5</a>
-            <a id="sendEmailButton6" class="send-button" href="#">Send Email to Group 6</a>
+            <a id="sendEmailButton1" class="send-button" href="#">Send Email to Batch 1</a>
+            <a id="sendEmailButton2" class="send-button" href="#">Send Email to Batch 2</a>
+            <a id="sendEmailButton3" class="send-button" href="#">Send Email to Batch 3</a>
+            <a id="sendEmailButton4" class="send-button" href="#">Send Email to Batch 4</a>
+            <a id="sendEmailButton5" class="send-button" href="#">Send Email to Batch 5</a>
+            <a id="sendEmailButton6" class="send-button" href="#">Send Email to Batch 6</a>
         </div>
     </div>
 
